New font and more localization

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
 
   <!-- Fonts -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Maven+Pro">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Maven+Pro|Amatic+SC:400,700|Dancing+Script">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
 
