--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Maven+Pro|Amatic+SC:400,700|Dancing+Script">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
+  />
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
+  />
 
   <title>Kat and Berti's Wedding</title>
 </head>
